# docs/swagger.json
@@ -52,9 +52,57 @@
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "id",
+                        "description": "name",
                         "name": "name",
                         "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\",\"msg\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/update": {
+            "post": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "修改用户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "name",
+                        "name": "name",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "update_name",
+                        "name": "update_name",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "update_password",
+                        "name": "update_password",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "update_email",
+                        "name": "update_email",
+                        "in": "formData"
+                    },
+                    {
+                        "type": "string",
+                        "description": "update_phone",
+                        "name": "update_phone",
+                        "in": "formData"
                     }
                 ],
                 "responses": {
